--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link rel="JavaScript" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"> -->
+     
     <title>React App</title>
   </head>
   <body>
